--- a/src/app/about-ieeeitba/about-ieeeitba.component.html
+++ b/src/app/about-ieeeitba/about-ieeeitba.component.html
@@ -1,7 +1,6 @@
 <div class="global-container" fxLayoutAlign="center center" fxLayout="column">
-  <div class="text-content">
 
-      <div>
+      <div class="row text-center">
 
         <div class="aboutIEEE">
             <div class="card-body">
@@ -20,7 +19,6 @@
     <!--<h1>
         Alcance
     </h1>-->
-  </div>
   <!-- Grid row -->
 <div class="row text-center">
 
