--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,7 +14,7 @@
         
         <div class="full-width" fxLayoutAlign="center center" fxLayout="row" >
             <div>
-                <links>      
+                <links class="collapse navbar-collapse ">      
                 <ul class="flex-fill navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link waves-light" mdbWavesEffect><b>IEEE</b><span class="sr-only">(current)</span></a>
