--- a/src/app/about-ieeeitba/about-ieeeitba.component.html
+++ b/src/app/about-ieeeitba/about-ieeeitba.component.html
@@ -1,21 +1,24 @@
-<div class="global-container" fxLayoutAlign="center center" fxLayout="column">
+<div class="global-container-b" fxLayoutAlign="center center" fxLayout="column">
 
-      <div class="row text-center">
+    <div class="row text-center">
 
         <div class="aboutIEEE">
-            <div class="card-body">
-                <h1 class="font-weight-bold deep-orange-lighter-hover mb-3">IEEE ITBA</h1>
+            
+                <!--<h1 class="font-weight-bold deep-orange-lighter-hover mb-3">IEEE ITBA</h1>-->
+                <img class="mainIcon" src="assets/icons/IEEE ITBA STUDENT BRANCH.svg">
+                
                 <p class="text">
                   Somos una organización estudiantil del ITBA cuyo objetivo es el desarrollo de la tecnología y sus aplicaciones para el avance de la humanidad.
                   
                   <!--Sostenemos que tanto las habilidades duras como blandas son claves para poder prosperar en el mundo profesional, y en base a este convencimiento, mediante actividades, fomentamos mecanismos para fortificar ambos tipos de conocimientos.-->
                 </p>
-            </div>
+            
         </div>
 
     </div>
 
-        
+</div>
+<div class="global-container" fxLayoutAlign="center center" fxLayout="column">
     <!--<h1>
         Alcance
     </h1>-->
