--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-navbar></app-navbar>
-<app-about-ieeeitba></app-about-ieeeitba>
-<app-ieee-eventos></app-ieee-eventos>
+<div class="spacenav">
+    
+</div>
+<app-about-ieeeitba id="about-ieee" ></app-about-ieeeitba>
+<app-ieee-eventos id="eventos" ></app-ieee-eventos>
+<app-equipo id="equipo"></app-equipo>
+<app-itba-ieee-marca></app-itba-ieee-marca>
