--- a/src/app/equipo/equipo.component.html
+++ b/src/app/equipo/equipo.component.html
@@ -1,1 +1,23 @@
-<p>equipo works!</p>
+<div class="global-container" fxLayoutAlign="center center" fxLayout="column">
+    <h1 class="font-weight-bold deep-orange-lighter-hover mb-3">Equipo</h1>
+    <div  fxLayoutAlign="center center" fxLayout="row">
+    <app-cargo 
+        nombre="Ariel"
+        apellido="Nowik"
+        cargo="Presidente"
+        imageurl="https://media-exp1.licdn.com/dms/image/C4E03AQFTxrT6JoryVg/profile-displayphoto-shrink_200_200/0?e=1588809600&v=beta&t=Xj_YKJanffsC1FXavOEonkUKitd6qP1K2M6hOcqelKQ"
+        linkedin="https://www.linkedin.com/in/ariel-nowik-13608a158/"
+        email="anowik@itba.edu.ar"
+        >
+    </app-cargo>
+    <app-cargo 
+        nombre="Franco"
+        apellido="Moriconi"
+        cargo="Tesorero"
+        imageurl="assets/image/FRANCO-MORICONI.jpg"
+        email="fmoriconi@itba.edu.ar"
+        linkedin="https://www.linkedin.com/in/franco-moriconi-0002a0196/"
+    >
+    </app-cargo>
+    </div>
+</div>
