--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,7 @@
 <!--Navbar-->
+
 <header class="h-100">
     <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark light-blue darken-3 justify-content-between fixed-top scrolling-navbar" [containerInside]="true">
-
-        
-    
         <!-- Collapsible content -->
             
             <!-- Links -->
@@ -17,13 +15,13 @@
                 <links class="collapse navbar-collapse ">      
                 <ul class="flex-fill navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link waves-light" mdbWavesEffect><b>IEEE</b><span class="sr-only">(current)</span></a>
+                        <a pageScroll (click)="scrollTo('#about-ieee')" class="nav-link waves-light" mdbWavesEffect><b>IEEE</b><span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link waves-light" mdbWavesEffect>Eventos<span class="sr-only">(current)</span></a>
+                        <a pageScroll (click)="scrollTo('#eventos')" class="nav-link waves-light" mdbWavesEffect>Eventos<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link waves-light" mdbWavesEffect>Equipo</a>
+                        <a pageScroll (click)="scrollTo('#equipo')" class="nav-link waves-light" mdbWavesEffect>Equipo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link waves-light" mdbWavesEffect>Sponsors<span class="sr-only">(current)</span></a>
