--- a/src/app/itba-ieee-marca/itba-ieee-marca.component.html
+++ b/src/app/itba-ieee-marca/itba-ieee-marca.component.html
@@ -1,17 +1,13 @@
 
 <div class="global-container" fxLayoutAlign="center center" fxLayout="column">
-    <div class="logo-container" fxLayoutAlign="end center" fxLayout="row">
-        <div>
-            <img class="logo" src="assets/image/ITBA 60 AÑOS - Negativo.png">
-        </div>
-        <div>
-            <img class="logo-ieee" src="assets/image/ieee_mb_white.png">
-        </div>
+    <div class="logo-container" fxLayoutAlign="center center" fxLayout="row">
+        <img class="logo" src="assets/image/ITBA 60 AÑOS - Negativo.png">
+        <img class="logo-ieee" src="assets/image/ieee_mb_white.png">
         
     </div> 
     
 </div>
-<div class="final-area" fxLayoutAlign="end center" fxLayout="column">
+<div class="final-area" fxLayoutAlign="center center" fxLayout="column">
     <div class="final-text" fxLayoutAlign="center center" fxLayout="row">
         IEEE-ITBA Student Branch es una organización estudiantil del ITBA respaldada por IEEE.
     </div>
