--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,11 +21,17 @@
                         <a pageScroll (click)="scrollTo('#eventos')" class="nav-link waves-light" mdbWavesEffect>Eventos<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a pageScroll (click)="scrollTo('#equipo')" class="nav-link waves-light" mdbWavesEffect>Equipo</a>
+                        <a pageScroll (click)="scrollTo('#iniciativas')" class="nav-link waves-light" mdbWavesEffect>Iniciativas<span class="sr-only">(current)</span></a>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link waves-light" mdbWavesEffect>Sponsors<span class="sr-only">(current)</span></a>
                     </li>
+
+                    <li class="nav-item">
+                        <a pageScroll (click)="scrollTo('#equipo')" class="nav-link waves-light" mdbWavesEffect>Equipo</a>
+                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link waves-light" mdbWavesEffect>Blog<span class="sr-only">(current)</span></a>
                     </li>
