--- a/src/app/about-ieeeitba/about-ieeeitba.component.css
+++ b/src/app/about-ieeeitba/about-ieeeitba.component.css
@@ -2,27 +2,29 @@
 .global-container{
     width:100%;
     background:#e3f2fd;
-    padding:100px;
+    padding: 50px;
 }
 
 .global-container-b{
   width:100%;
   background:#ffffff;
-  padding:100px;
-
+  padding: 50px;
 }
 .myCardRed{
-  max-width: 300px;
+  max-width: 400px;
   color: #ef5350;
+  text-align: center;
   /*background-color: #00b0ff;*/
 }
 .myCardYellow{
-  max-width: 300px;
+  max-width: 400px;
   color: #ffb300;
+  text-align: center;
 }
 .myCardGreen{
-  max-width: 300px;
+  max-width: 400px;
   color: #00c853;
+  text-align: center;
 }
 .aboutIEEE{
   max-width: 700px;
@@ -32,8 +34,10 @@
 .text{
   color: #000000;
   padding-top:30px;
+  text-align: center;
 }
 .mainIcon{
   max-width:100%;
   height: auto;
+  margin: 10px;
 }
