--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
-<app-navbar></app-navbar>
-<div class="spacenav">
+<app-navbar ></app-navbar>
+<div id="about-ieee" class="spacenav">
     
 </div>
-<app-about-ieeeitba id="about-ieee" ></app-about-ieeeitba>
+<app-about-ieeeitba  ></app-about-ieeeitba>
 <app-ieee-eventos id="eventos" ></app-ieee-eventos>
+<app-iniciativas></app-iniciativas>
 <app-equipo id="equipo"></app-equipo>
 <app-itba-ieee-marca></app-itba-ieee-marca>
