--- a/src/app/cargo/cargo.component.css
+++ b/src/app/cargo/cargo.component.css
@@ -1,16 +1,41 @@
-.image-cargo{
-    border-radius: 50%;
-    width: 160px;
-    height: 160px;
-    padding: 20px;
+
+@media screen and (min-width: 700px){
+    .box {
+        border: 1px dotted #000;
+        margin: 10px;
+        background: #e1f5fe;
+        width: 180px;
+        height: 350px;
+        
+    }
+    .image-cargo{
+        border-radius: 50%;
+        width: 160px;
+        height: 160px;
+        padding: 20px;
+    }
 }
-.box{
-    border: 1px dotted #000;
-    padding: 20px;
-    margin: 20px;
-    background: #e1f5fe;
-    width: 200px;
-    height: 400px;
+@media screen and (max-width: 700px){
+    .box {
+        border: 1px dotted #000;
+        margin: 10px;
+        background: #e1f5fe;
+        width: 120px;
+        height: 290px;
+        
+    }
+    .image-cargo{
+        border-radius: 50%;
+        width: 100px;
+        height: 100px;
+        padding: 20px;
+    }
+}
+.back{
+    padding-top:10px;
+    background: #c8e6c9 ;
+    width:100%;
+    height:100%;
 }
 .linkedin{
     width:40px;
