--- a/src/app/cargo/cargo.component.html
+++ b/src/app/cargo/cargo.component.html
@@ -1,10 +1,19 @@
 <div class="box" fxLayoutAlign="start center" fxLayout="column">
     <img class="image-cargo" src="{{imageurl}}">
-    <h3 class="nombre"> {{nombre}} <br>
-    {{apellido}} </h3>
-    <h5 class="font-weight-bold deep-orange-lighter-hover mb-3"> <b>{{cargo}}</b> </h5>
-    {{email}}
-    <div *ngIf="linkedin" fxLayoutAlign="center center" fxLayout="row">
-       <a href="{{linkedin}}"> <img class="linkedin" src="assets\icons\linked-in.png"></a>
+    <div fxLayoutAlign="center center" fxLayout="row">
+        <p class="nombre"> {{nombre}} <br>
+        {{apellido}} </p>
     </div>
+
+    <p class="font-weight-bold deep-orange-lighter-hover mb-3"> <b>{{cargo}}</b> </p>
+    <div *ngIf="linkedin" fxLayoutAlign="center center" fxLayout="row">
+        <a href="{{linkedin}}"> <img class="linkedin" src="assets\icons\linked-in.png"></a>
+    </div>
+    <div *ngIf="!linkedin" fxLayoutAlign="center center" fxLayout="row">
+        <a href="{{linkedin}}"> <img class="linkedin" src="assets\icons\linked-in.png"></a>
+    </div>
+    <!--{{email}}-->
+    <!--<div *ngIf="linkedin" fxLayoutAlign="center center" fxLayout="row">
+        <a href="{{linkedin}}"> <img class="linkedin" src="assets\icons\linked-in.png"></a>
+    </div>-->
 </div>
