--- a/src/app/equipo/equipo.component.css
+++ b/src/app/equipo/equipo.component.css
@@ -1,5 +1,20 @@
-.global-container{
-    width:100%;
-    background:#e8eaf6;
-    padding:100px;
+@media screen and (min-width: 700px){
+    .global-container{
+        width:100%;
+        background: #ffffff;;
+        padding:100px;
+        text-align: center;
+    }
+}
+@media screen and (max-width: 700px){
+    .global-container{
+        width:100%;
+        background: #ffffff;;
+        padding:10px;
+        text-align: center;
+    }
+}
+.caja{
+    flex-wrap: wrap;
+    justify-content: center;
 }
