--- a/src/app/equipo/equipo.component.html
+++ b/src/app/equipo/equipo.component.html
@@ -1,6 +1,6 @@
 <div class="global-container" fxLayoutAlign="center center" fxLayout="column">
-    <h1 class="font-weight-bold deep-orange-lighter-hover mb-3">Equipo</h1>
-    <div  fxLayoutAlign="center center" fxLayout="row">
+    <h1 class="font-weight-bold deep-orange-lighter-hover mb-3">Miembros del equipo</h1>
+    <div  class="caja" fxLayoutAlign="center center" fxlayoutgap="10px grid">
     <app-cargo 
         nombre="Ariel"
         apellido="Nowik"
@@ -17,6 +17,22 @@
         imageurl="assets/image/FRANCO-MORICONI.jpg"
         email="fmoriconi@itba.edu.ar"
         linkedin="https://www.linkedin.com/in/franco-moriconi-0002a0196/"
+    >
+    </app-cargo>
+    <app-cargo 
+        nombre="Ricardo"
+        apellido="Lin"
+        cargo="Fundraising"
+        imageurl="assets/image/RICARDO-LIN.jpg"
+        email="rlin@itba.edu.ar"
+    >
+    </app-cargo>
+    <app-cargo 
+        nombre="Alex"
+        apellido="Moldavan"
+        cargo="Media & Com."
+        imageurl="assets/image/ALEX-MOLDAVAN.jpg"
+        email="amoldavan@itba.edu.ar"
     >
     </app-cargo>
     </div>
