--- a/src/app/iniciativas/iniciativas.component.html
+++ b/src/app/iniciativas/iniciativas.component.html
@@ -1,10 +1,10 @@
 
-<div id="iniciativas" class="global-container" fxLayoutAlign="center center" fxLayout="column">
+<div class="global-container" fxLayoutAlign="center center" fxLayout="column">
 
     <div class="row text-center">
         <div class="myCardWie" fxLayoutAlign="center center" fxLayout="row">
             <div [fxFlex.gt-sm]="50" >
-                <h1 class="font-weight-bold deep-orange-lighter-hover mb-3">Woman in Engineering</h1>
+                <h1 class="font-weight-bold deep-orange-lighter-hover mb-3">Women in Engineering</h1>
                 <p class="text">
                     Nuestro objetivo es promover la diversidad en la tecnología mediante la educacion y representación.
                     <!--Sostenemos que tanto las habilidades duras como blandas son claves para poder prosperar en el mundo profesional, y en base a este convencimiento, mediante actividades, fomentamos mecanismos para fortificar ambos tipos de conocimientos.-->
