--- a/src/app/cargo/cargo.component.css
+++ b/src/app/cargo/cargo.component.css
@@ -5,46 +5,63 @@
         margin: 10px;
         background: #e1f5fe;
         width: 180px;
-        height: 350px;
-        
+        height: auto;
+
     }
     .image-cargo{
         border-radius: 50%;
         width: 160px;
         height: 160px;
-        padding: 20px;
+        padding: 10px;
+        margin-top: 10px;
     }
 }
 @media screen and (max-width: 700px){
-    .box {
-        border: 1px dotted #000;
-        margin: 10px;
-        background: #e1f5fe;
-        width: 120px;
-        height: 290px;
-        
-    }
-    .image-cargo{
-        border-radius: 50%;
-        width: 100px;
-        height: 100px;
-        padding: 20px;
-    }
+  .box {
+      border: 1px dotted #000;
+      margin: 10px;
+      background: #e1f5fe;
+      width: 120px;
+      height: auto;
+  }
+  .image-cargo{
+      border-radius: 50%;
+      width: 100px;
+      height: 100px;
+      padding: 10px;
+      margin-top: 10px;
+  }
 }
 .back{
-    padding-top:10px;
-    background: #c8e6c9 ;
-    width:100%;
-    height:100%;
+  padding-top:10px;
+  background: #c8e6c9 ;
+  width:100%;
+  height:100%;
 }
 .linkedin{
-    width:40px;
-    margin:10px;
+  width:40px;
+  margin:10px;
+  margin-bottom: 20px;
 }
 .nombre{
-    text-align: center;
-
+  text-align: center;
+  margin: 5px;
 }
+@media screen and (max-width: 700px){
+  .text{
+    font-weight: bold;
+    margin: 5px;
+    font-size:15px;
+  }
+}
+@media screen and (min-width: 700px){
+  .text{
+    font-weight: bold;
+    font-size:16px;
+    margin: 5px;
+  }
+}
+
 .cargo{
-    
+  height:30px;
 }
