--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,2 @@
 <app-navbar ></app-navbar>
-<div class="spacenav">
-</div>
-<app-about-ieeeitba id="about-ieee"></app-about-ieeeitba>
-<div id="eventos" class="spacenav">
-</div>
-<app-ieee-eventos></app-ieee-eventos>
-<div class="spacenav">
-</div>
-<app-iniciativas id="iniciativas"></app-iniciativas>
-<div class="spacenav">
-</div>
-<app-equipo id="equipo"></app-equipo>
-<app-itba-ieee-marca></app-itba-ieee-marca>
+<router-outlet></router-outlet>
