--- a/src/app/equipo/equipo.component.html
+++ b/src/app/equipo/equipo.component.html
@@ -14,7 +14,7 @@
           nombre="Dante"
           apellido="Kieniguiel"
           cargo="Vicepresidente"
-          imageurl="https://media-exp1.licdn.com/dms/image/C4E03AQHDj1YtRTiMMg/profile-displayphoto-shrink_200_200/0?e=1588809600&v=beta&t=bQB_gVlzsMtr2qWVs15j7DYNTOEo8yZw5brxsavBr4M"
+          imageurl="https://media-exp1.licdn.com/dms/image/C4E03AQFa2fONHmIiRA/profile-displayphoto-shrink_200_200/0?e=1588809600&v=beta&t=y2j6YMTOPnz5RpVM-VBm9LdmEmX6CZEI6hgBeYHo87o"
           email="dkieniguiel@itba.edu.ar"
           linkedin="https://www.linkedin.com/in/dante-k-572396bb/"
       >
@@ -57,7 +57,7 @@
       </app-cargo>
       <app-cargo
           nombre="Sofía"
-          apellido="Petro"
+          apellido="Petrozzino"
           cargo="Media & Com."
           imageurl="assets/image/SOFIA-PETRO.jpeg"
           email="spetro@itba.edu.ar"
