--- a/src/app/ieeextreme/ieeextreme.component.html
+++ b/src/app/ieeextreme/ieeextreme.component.html
@@ -1,1 +1,62 @@
-<h1> IEEExtreme programming competition</h1>
+
+
+<div class="spacenav">
+
+</div>
+
+<div class="ieeextreme-background" fxLayoutAlign="center center" fxLayout="column">
+</div>
+
+<div class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
+    <div class="ieeextreme" fxLayoutAlign="center center" fxLayout="column">
+            <h1 class="title"> IEEExtreme programming competition</h1>
+
+            <p class="text"> La IEEExtreme programming competition es una competencia de programación de 24 hs donde competidores de distintas universidades y carreras dedican gran esfuerzo y motivación en pos de incrementar su habilidad de resolver problemas y pasar un gran momento.</p>
+            <!--<div [fxFlex.gt-sm]="50"  fxLayoutAlign="center center" fxLayout="row">
+                <img  class="imageContent" src="../assets/image/ieee-extreme.jpg">
+            </div> -->
+            <div class="circle-container" fxLayoutAlign="center center" fxLayout="row">
+                <div fxLayout="column" fxLayoutAlign="center center" class="circle area">
+                    10
+                    <p class="text2">Ediciones </p>
+                </div>
+                <div fxLayout="column" fxLayoutAlign="center center" class="circle area">
+                    70+
+                    <p class="text2">Participantes </p>
+                </div>
+                <div fxLayout="column" fxLayoutAlign="center center" class="circle area">
+                    15
+                    <p class="text2">Top 500/8000 </p>
+                </div>
+                <div fxLayout="column" fxLayoutAlign="center center" class="circle area">
+                    ITBA
+                    <p class="text2">Sede</p>
+                </div>
+            </div>
+    </div>
+</div>
+<div class="ieeextreme-background2" fxLayoutAlign="center center" fxLayout="column">
+</div>
+<div class="ieeextreme-big">
+    <div class="ieeextreme2" fxLayoutAlign="center center" fxLayout="column">
+        <h1 class="title"> Formato </h1>
+        <div class="circle-container" fxLayoutAlign="center center" fxLayout="row">
+            <div fxLayout="column" fxLayoutAlign="center center" class="circle area">
+                24hs
+                <p class="text2">Duración </p>
+            </div>
+            <div fxLayout="column" fxLayoutAlign="center center" class="circle area">
+                3
+                <p class="text2">Personas por equipo </p>
+            </div>
+            <div fxLayout="column" fxLayoutAlign="center center" class="circle area">
+                1
+                <p class="text2">Problema por hora</p>
+            </div>
+            <div fxLayout="column" fxLayoutAlign="center center" class="circle area">
+                0-100
+                <p class="text2">Puntación</p>
+            </div>
+        </div>
+    </div>
+</div>
