--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <!--Navbar-->
 
-<header class="h-100">
+<!--<header class="h-100">-->
     <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark light-blue darken-3 justify-content-between fixed-top scrolling-navbar" [containerInside]="true">
         <!-- Collapsible content -->
             
@@ -25,15 +25,11 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link waves-light" mdbWavesEffect>Sponsors<span class="sr-only">(current)</span></a>
-                    </li>
-
-                    <li class="nav-item">
                         <a pageScroll (click)="scrollTo('#equipo')" class="nav-link waves-light" mdbWavesEffect>Equipo</a>
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link waves-light" mdbWavesEffect>Blog<span class="sr-only">(current)</span></a>
+                        <a class="nav-link waves-light" mdbWavesEffect>Contacto<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto nav-flex-icons">
@@ -52,4 +48,4 @@
     
     </mdb-navbar>
   <!--/.Navbar-->
-  </header>
+<!--</header>-->
