--- a/src/app/ieee-eventos/ieee-eventos.component.html
+++ b/src/app/ieee-eventos/ieee-eventos.component.html
@@ -11,7 +11,7 @@
                     <!--Sostenemos que tanto las habilidades duras como blandas son claves para poder prosperar en el mundo profesional, y en base a este convencimiento, mediante actividades, fomentamos mecanismos para fortificar ambos tipos de conocimientos.-->
                 </p>
                 
-                <a href=""> Ver más </a>
+                <a href="ieeextreme"> Ver más </a>
             </div>
             <div [fxFlex.gt-sm]="50"  fxLayoutAlign="center center" fxLayout="row">
                 <img  class="imageContent" src="../assets/image/ieee-extreme.jpg">
