--- a/src/app/ieeextreme/ieeextreme.component.html
+++ b/src/app/ieeextreme/ieeextreme.component.html
@@ -10,53 +10,80 @@
 <div class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
     <div class="ieeextreme" fxLayoutAlign="center center" fxLayout="column">
             <h1 class="title"> IEEExtreme programming competition</h1>
-
-            <p class="text"> La IEEExtreme programming competition es una competencia de programación de 24 hs donde competidores de distintas universidades y carreras dedican gran esfuerzo y motivación en pos de incrementar su habilidad de resolver problemas y pasar un gran momento.</p>
             <!--<div [fxFlex.gt-sm]="50"  fxLayoutAlign="center center" fxLayout="row">
                 <img  class="imageContent" src="../assets/image/ieee-extreme.jpg">
             </div> -->
             <div class="circle-container" fxLayoutAlign="center center" fxLayout="row">
                 <div fxLayout="column" fxLayoutAlign="center center" class="circle area">
                     10
-                    <p class="text2">Ediciones </p>
+                    <p class="text2">Ediciones realizadas </p>
                 </div>
                 <div fxLayout="column" fxLayoutAlign="center center" class="circle area">
                     70+
-                    <p class="text2">Participantes </p>
+                    <p class="text2">Participantes año 2019</p>
                 </div>
                 <div fxLayout="column" fxLayoutAlign="center center" class="circle area">
                     15
-                    <p class="text2">Top 500/8000 </p>
+                    <p class="text2">Equipos top 500/8000 </p>
                 </div>
-                <div fxLayout="column" fxLayoutAlign="center center" class="circle area">
-                    ITBA
-                    <p class="text2">Sede</p>
+                <div fxLayout="column" fxLayoutAlign="center center" class="last-circle">
+                    24 hs
+                    <p class="text2">de competencia</p>
                 </div>
             </div>
     </div>
 </div>
-<div class="ieeextreme-background2" fxLayoutAlign="center center" fxLayout="column">
-</div>
-<div class="ieeextreme-big">
-    <div class="ieeextreme2" fxLayoutAlign="center center" fxLayout="column">
-        <h1 class="title"> Formato </h1>
-        <div class="circle-container" fxLayoutAlign="center center" fxLayout="row">
-            <div fxLayout="column" fxLayoutAlign="center center" class="circle area">
-                24hs
-                <p class="text2">Duración </p>
-            </div>
-            <div fxLayout="column" fxLayoutAlign="center center" class="circle area">
-                3
-                <p class="text2">Personas por equipo </p>
-            </div>
-            <div fxLayout="column" fxLayoutAlign="center center" class="circle area">
-                1
-                <p class="text2">Problema por hora</p>
-            </div>
-            <div fxLayout="column" fxLayoutAlign="center center" class="circle area">
-                0-100
-                <p class="text2">Puntación</p>
+
+<div class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
+    <div class="ieeextreme2" fxLayoutAlign="center center" fxLayout="row">
+        <div [fxFlex]="50">
+            <h1 class="title2">¡Resolve problemas en equipo! </h1>
+            <div class="circle-container" fxLayoutAlign="center center" fxLayout="row">
+                <p class="text"> La IEEExtreme programming competition es una competencia de programación de 24 hs donde competidores de distintas universidades y carreras dedican gran esfuerzo y motivación en pos de incrementar su habilidad de resolver problemas en equipo y pasar un gran momento.</p>
             </div>
         </div>
+        <div [fxFlex]="50" fxLayoutAlign="center center" fxLayout="row">
+            <img src="assets/image/meeting.png">
+        </div>
+    </div>
+</div>
+
+<div class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
+    <div class="ieeextreme3" fxLayoutAlign="center center" fxLayout="row">
+        <div [fxFlex]="50" fxLayoutAlign="center center" fxLayout="row">
+            <img src="assets/image/winning.png">
+        </div>
+        <div [fxFlex]="50">
+            <h1 class="title2">¿Queres participar? </h1>
+            <div class="circle-container" fxLayoutAlign="center center" fxLayout="row">
+                <p class="text"> Abrimos un formulario para aquellos que esten interesados en la competencia de este año, cuando abramos las inscripciones les mandaremos una notificación. ¡Aprovecha el tiempo para conseguir un equipo y entrenar! </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
+    <div class="ieeextreme4" fxLayoutAlign="center center" fxLayout="column">
+        <div>
+            <h1 class="title2">¡Estamos buscando nuevos sponsors! </h1>
+            <div class="circle-container" fxLayoutAlign="center center" fxLayout="row">
+                <p class="text"> Para el desarrollo de la competencia requerimos fondos, por lo que estamos en la busqueda de nuevos auspiciantes para nuestro evento. Para más información contactar a cualquier miembro de nuestro equipo de fundraising</p>
+            </div>
+            <div  fxLayoutAlign="center center" fxLayout="row">
+                <div class="persona">
+                    <div><b>Franco Moriconi</b></div>
+                    <div>fmoriconi@itba.edu.ar </div>
+                </div>
+                <div class="persona">
+                    <div><b>Ariel Nowik</b></div>
+                    <div>anowik@itba.edu.ar </div>
+                </div>
+                <div class="persona">
+                    <div><b>Ricardo Lin</b></div>
+                    <div>xlin@itba.edu.ar </div>
+                </div>
+            </div>
+        </div>
+        
     </div>
 </div>
