--- a/src/app/ieeextreme/ieeextreme.component.html
+++ b/src/app/ieeextreme/ieeextreme.component.html
@@ -1,10 +1,11 @@
+<app-navbar-ieeextreme></app-navbar-ieeextreme>
 <div class="spacenav">
 </div>
 
 <div class="ieeextreme-background" fxLayoutAlign="center center" fxLayout="column">
 </div>
 
-<div class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
+<div id="about-ieeextreme" class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
     <div class="ieeextreme" fxLayoutAlign="center center" fxLayout="column">
             <h1 class="title"> IEEExtreme programming competition</h1>
             <!--<div [fxFlex.gt-sm]="50"  fxLayoutAlign="center center" fxLayout="row">
@@ -68,7 +69,7 @@
     </div>
 </div>
 
-<div class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
+<div id="participa" class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
     <div class="ieeextreme3" fxLayoutAlign="center center" fxLayout="row">
         <div [fxHide.lt-md]="true" [fxFlex.gt-sm]="50" fxLayoutAlign="center center" fxLayout="row">
             <img src="assets/image/winning.png">
@@ -85,10 +86,10 @@
     </div>
 </div>
 
-<div class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
+<div id="sponsors" class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
     <div class="ieeextreme4" fxLayoutAlign="center center" fxLayout="column">
         <div>
-            <h1 class="title2">¡Estamos buscando nuevos sponsors! </h1>
+            <h1 class="title2">Sponsorhip 2020</h1>
             <div class="circle-container" fxLayoutAlign="center center" fxLayout="row">
                 <p class="text"> Para el desarrollo de la competencia requerimos fondos, por lo que estamos en la busqueda de nuevos auspiciantes para nuestro evento. Para más información contactar a cualquier miembro de nuestro equipo de fundraising</p>
             </div>
@@ -110,3 +111,21 @@
         
     </div>
 </div>
+
+<div id="sponsors" class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
+    <div class="ieeextreme5" fxLayoutAlign="center center" fxLayout="column">
+        <div>
+            <h1 class="title2">Sponsors que nos han acompañado</h1>
+            <p class="text"> Estos son algunos de los sponsors que nos han acompañado en ediciones anteriores.</p>
+            <div class="fundraising" fxLayoutAlign="center center" fxLayout="row">
+                <img class="logo-sponsor" src="assets/image/sponsors/eiwa.png">
+                <img class="logo-sponsor" src="assets/image/sponsors/flowics.png">
+                <img class="logo-sponsor" src="assets/image/sponsors/inclusion.png">
+                <img class="logo-sponsor" src="assets/image/sponsors/tgs.jpg">     
+            </div>
+        </div>
+        
+    </div>
+</div>
+
+<app-itba-ieee-marca></app-itba-ieee-marca>
