--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,12 +1,8 @@
-
+<app-navbar ></app-navbar>
 <div id="about-ieee" class="spacenav">
 </div>
 <app-about-ieeeitba></app-about-ieeeitba>
-<div  class="spacenav">
-</div>
 <app-ieee-eventos id="eventos"></app-ieee-eventos>
-<div class="spacenav">
-</div>
 <app-iniciativas id="iniciativas"></app-iniciativas>
 <div id="equipo" class="spacenav">
 </div>
