--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -29,7 +29,7 @@
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link waves-light" mdbWavesEffect>Contacto<span class="sr-only">(current)</span></a>
+                        <a pageScroll (click)="scrollTo('#contacto')" class="nav-link waves-light" mdbWavesEffect>Contacto<span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto nav-flex-icons">
