--- a/src/app/ieeextreme/ieeextreme.component.html
+++ b/src/app/ieeextreme/ieeextreme.component.html
@@ -7,6 +7,7 @@
 
 <div id="about-ieeextreme" class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
     <div class="ieeextreme" fxLayoutAlign="center center" fxLayout="column">
+      <div class="information">
             <h1 class="title"> IEEExtreme programming competition</h1>
             <!--<div [fxFlex.gt-sm]="50"  fxLayoutAlign="center center" fxLayout="row">
                 <img  class="imageContent" src="../assets/image/ieee-extreme.jpg">
@@ -52,11 +53,13 @@
                     </div>
                 </div>
             </div>
+        </div>
     </div>
 </div>
 
 <div class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
     <div class="ieeextreme2" fxLayoutAlign="center center" fxLayout="row">
+      <div class="information">
         <div [fxFlex.gt-sm]="50">
             <h1 class="title2">¡Resolve problemas en equipo! </h1>
             <div class="circle-container" fxLayoutAlign="center center" fxLayout="row">
@@ -66,29 +69,32 @@
         <div [fxFlex.gt-sm]="50" fxLayoutAlign="center center" fxLayout="row">
             <img src="assets/image/meeting.png">
         </div>
+      </div>
     </div>
 </div>
 
 <div id="participa" class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
     <div class="ieeextreme3" fxLayoutAlign="center center" fxLayout="row">
-        <div [fxHide.lt-md]="true" [fxFlex.gt-sm]="50" fxLayoutAlign="center center" fxLayout="row">
-            <img src="assets/image/winning.png">
-        </div>
-        <div [fxFlex.gt-sm]="50">
-            <h1 class="title2">¿Queres participar? </h1>
-            <div class="circle-container" fxLayoutAlign="center center" fxLayout="row">
-                <p class="text"> Abrimos un formulario para aquellos que esten interesados en la competencia de este año, cuando abramos las inscripciones les mandaremos una notificación. ¡Aprovecha el tiempo para conseguir un equipo y entrenar! </p>
-            </div>
-        </div>
-        <div [fxHide.gt-sm]="true" [fxFlex.gt-sm]="50" fxLayoutAlign="center center" fxLayout="row">
-            <img src="assets/image/winning.png">
+        <div class="information">
+          <div [fxHide.lt-md]="true" [fxFlex.gt-sm]="50" fxLayoutAlign="center center" fxLayout="row">
+              <img src="assets/image/winning.png">
+          </div>
+          <div [fxFlex.gt-sm]="50">
+              <h1 class="title2">¿Queres participar? </h1>
+              <div class="circle-container" fxLayoutAlign="center center" fxLayout="row">
+                  <p class="text"> Abrimos un formulario para aquellos que esten interesados en la competencia de este año, cuando abramos las inscripciones les mandaremos una notificación. ¡Aprovecha el tiempo para conseguir un equipo y entrenar! </p>
+              </div>
+          </div>
+          <div [fxHide.gt-sm]="true" [fxFlex.gt-sm]="50" fxLayoutAlign="center center" fxLayout="row">
+              <img src="assets/image/winning.png">
+          </div>
         </div>
     </div>
 </div>
 
 <div id="sponsors" class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
     <div class="ieeextreme4" fxLayoutAlign="center center" fxLayout="column">
-        <div>
+        <div class="information">
             <h1 class="title2">Sponsorhip 2020</h1>
             <div class="circle-container" fxLayoutAlign="center center" fxLayout="row">
                 <p class="text"> Para el desarrollo de la competencia requerimos fondos, por lo que estamos en la busqueda de nuevos auspiciantes para nuestro evento. Para más información contactar a cualquier miembro de nuestro equipo de fundraising</p>
@@ -108,23 +114,23 @@
                 </div>
             </div>
         </div>
-        
+
     </div>
 </div>
 
 <div id="sponsors" class="ieeextreme-big" fxLayoutAlign="center center" fxLayout="column">
     <div class="ieeextreme5" fxLayoutAlign="center center" fxLayout="column">
-        <div>
+        <div class="information">
             <h1 class="title2">Sponsors que nos han acompañado</h1>
             <p class="text"> Estos son algunos de los sponsors que nos han acompañado en ediciones anteriores.</p>
             <div class="fundraising" fxLayoutAlign="center center" fxLayout="row">
                 <img class="logo-sponsor" src="assets/image/sponsors/eiwa.png">
                 <img class="logo-sponsor" src="assets/image/sponsors/flowics.png">
                 <img class="logo-sponsor" src="assets/image/sponsors/inclusion.png">
-                <img class="logo-sponsor" src="assets/image/sponsors/tgs.jpg">     
+                <img class="logo-sponsor" src="assets/image/sponsors/tgs.jpg">
             </div>
         </div>
-        
+
     </div>
 </div>
 
