--- a/src/app/equipo/equipo.component.css
+++ b/src/app/equipo/equipo.component.css
@@ -1,17 +1,22 @@
-@media screen and (min-width: 700px){
+@media screen and (min-width: 600px){
     .global-container{
         width:100%;
         background: #ffffff;;
         padding:10px;
         text-align: center;
     }
+    .cargo{
+    }
 }
-@media screen and (max-width: 700px){
+@media screen and (max-width: 600px){
     .global-container{
         width:100%;
         background: #ffffff;;
         padding:10px;
         text-align: center;
+    }
+    .cargo{
+        width:90%;
     }
 }
 .caja{
