--- a/src/app/cargo/cargo.component.html
+++ b/src/app/cargo/cargo.component.html
@@ -1,4 +1,4 @@
-<div class="box" fxLayoutAlign="start center" fxLayout="column">
+<div class="box" fxLayoutAlign="start center" fxLayout="row">
     <div>
       <img class="image-cargo" src="{{imageurl}}">
     </div>
