--- a/src/app/equipo/equipo.component.html
+++ b/src/app/equipo/equipo.component.html
@@ -1,6 +1,6 @@
 <div class="global-container" fxLayoutAlign="center center" fxLayout="column">
     <h1 class="font-weight-bold deep-orange-lighter-hover mb-3">Miembros del equipo</h1>
-    <div  class="caja" fxLayoutAlign="center center" fxlayoutgap="10px grid">
+    <div class="caja" fxLayoutAlign="center center" fxLayout="column"> <!--fxlayoutgap="10px grid">-->
       <app-cargo
           nombre="Ariel"
           apellido="Nowik"
